--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi! My name is Tony Liu, and I am a student at New York University's Courant Institute of Mathematical Sciences, currently pursuing a Bachelor of Arts degree in computer science. I have always been fascinated by the boundless possibilities that computer science offers, specifically the realms of UI/UX, cybersecurity, and computer vision. Please scroll down to see the courses I have taken, my languages and skills, and my past projects.</p>
+          <p>Hi! My name is Tony Liu, and I am a student at New York University's Courant Institute of Mathematical Sciences, currently pursuing a Bachelor of Arts degree in computer science with a minor in mathematics. I have always been fascinated by the boundless possibilities that computer science offers, and I am specifically interested in full stack development, artificial intelligence, natural langauge processing, and computer vision. Please scroll down to see the courses I have taken, my languages and skills, and my past projects. Please also feel free to check out my LinkedIn, GitHub, or write me an email. Links are below and on the side menu.</p>
         </div>
     </section><!-- End About Section -->
 
