--- a/index.html
+++ b/index.html
@@ -41,30 +41,34 @@
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
+<!-- ======= Header ======= -->
+<header id="header">
+  <div class="d-flex flex-column">
 
-      <div class="profile">
-        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle circle-image">
-        <h1 class="text-light"><a href="index.html">Tony Liu</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/tony-liu-5b375a20b" target="_blank"><i class="bx bxl-linkedin"></i></a>
-          <a href="mailto:tl3608@nyu.edu"><i class="bi bi-envelope"></i></a>
-          <a href="https://github.com/tony102809" target="_blank"><i class="bx bxl-github"></i></a>
-        </div>
-        
-
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
+    <div class="profile">
+      <img src="assets/img/profile-img.png" alt="Tony Liu" class="img-fluid rounded-circle">
+      <h1 class="text-light"><a href="index.html">Tony Liu</a></h1>
+      <div class="social-links mt-3 text-center">
+        <a href="https://www.linkedin.com/in/tony-liu-5b375a20b" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="mailto:tl3608@nyu.edu" class="email"><i class="bi bi-envelope"></i></a>
+        <a href="https://github.com/tony102809" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+      </div>
     </div>
-  </header><!-- End Header -->
+
+    <nav id="navbar" class="nav-menu navbar">
+      <ul>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
+        <li><a href="#experience" class="nav-link scrollto"><i class="bx bx-briefcase"></i> <span>Experience</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Past Projects</span></a></li>
+        <li><a href="#courses" class="nav-link scrollto"><i class="bx bx-book"></i> <span>Courses</span></a></li>
+        <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+  </div>
+</header><!-- End Header -->
+
 
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center" style="background-image: url('assets/img/hero- bg.jpg');" >
