--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     </div>
     
     <div class="row">
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+      <!-- Black Creek Digital Experience -->
+      <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
         <div class="info-box">
           <span class="icon"><img src="assets/img/BC_LOGO.jpeg" alt="Black Creek Digital Logo" style="width: 60px; height: 60px; border-radius: 50%;"></span>
           <h4>Software Engineer Intern</h4>
@@ -111,138 +112,89 @@
           <p>Developed Python and Bash automation scripts, leveraging Ansible for dynamic deployment of GPUs and automated platform switching.</p>
         </div>
       </div>
+      <!-- NYU High Performance Computing Team Experience -->
+      <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+        <div class="info-box">
+          <span class="icon"><img src="assets/img/nyu_logo.jpg" alt="NYU logo" style="width: 60px; height: 60px; border-radius: 50%;"></span>
+          <h4>NYU High Performance Computing Team Member</h4>
+          <h5>New York University (June 2023 - December 2023)</h5>
+          <p>Member of the NYU HPC team, specifically the HPC Conjugate Gradient (HPCG) software group.</p>
+          <p>The HPCG benchmark uses a preconditioned conjugate gradient (PCG) algorithm to measure the performance of HPC platforms with respect to frequently observed but challenging patterns of computing, communication, and memory access.</p>
+        </div>
+      </div>
     </div>
   </div>
 </section><!-- End Experience Section -->
 
 
 
+<!-- ======= Resume Section ======= -->
+<section id="resume" class="resume">
+  <div class="container">
+    <div class="section-title">
+      <h2>Past Projects</h2>
+      <p>Below are past projects I have done in many different languages. Feel free to check them out for yourself on my GitHub, linked on the bottom and side menu of my website.</p>
+    </div>
 
-
-
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Past Projects</h2>
-          <p>Below are past projects I have done in many different langauges. Feel free to check them out for yourself on my GitHub, linked on the bottom and side menu of my website. </p>
-        </div>
-
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="course-box">
-              <h2>AI-Driven Neural Network Caption Generator</h2>
-              <p>
-                Developed an artificial intelligence system in Python and PyTorch to autonomously generate text captions from image data, using the MNIST dataset.
-                Constructed and monitored the integration of image feature extraction and dynamic caption generation, ensuring robust model performance using convolutional 
-                and recurrent neural networks. Implemented data preprocessing, model training, and evaluation processes, achieving a 97.78% accuracy rate on the MNIST test dataset with a convolutional neural network model.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="course-box">
-              <h2>Full Stack Project - Recipe Rover</h2>
-              <p>
-                Designed and developed Recipe Rover, a dynamic full-stack web app, leveraging Node.js, Express, MongoDB, and
-                Mongoose. Implemented user-friendly CRUD operations, secure authentication with Passport.js, and responsive UI
-                using Handlebars.
-                Implemented key security features, including user authentication, login/logout functionality, password encryption,
-                flash messaging, and responsive views, maintaining a balanced blend of functionality and design appeal.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="course-box">
-              <h2>Full Stack Project - Anonymous Q&A</h2>
-              <p>
-                Engineered a dynamic, single-page question-and-answer web app using Node.js, Express, and MongoDB. Leveraged
-                AJAX calls for asynchronous data retrieval, eliminating page refreshes and enhancing user experience.
-                Implemented secure RESTful API routes for CRUD operations, including background fetch requests, modal dialog
-                boxes for question submission, and error handling. Ensured efficient data handling, emphasizing code clarity and adherence to best practices.
-              </p>
-            </div>
-          </div>
-        </div>
+    <!-- First Row of Projects -->
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
-          <h2>NYU High Performance Computing Team (HPC)</h2>
-          <p>
-            Member on the NYU HPC team, specifically the  HPC Conjugate Gradient (HPCG) software group. The HPCG benchmark
-            uses a preconditioned conjugate gradient (PCG) algorithm to measure the performance of HPC platforms with
-            respect to frequently observed but challenging patterns of computing, communication, and memory access.
-          </p>
+          <h2>AI-Driven Neural Network Caption Generator</h2>
+          <p>Developed an artificial intelligence system in Python and PyTorch to autonomously generate text captions from image data, using the MNIST dataset. Constructed and monitored the integration of image feature extraction and dynamic caption generation, ensuring robust model performance using convolutional and recurrent neural networks. Implemented data preprocessing, model training, and evaluation processes, achieving a 97.78% accuracy rate on the MNIST test dataset with a convolutional neural network model.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
+          <h2>Full Stack Project - Recipe Rover</h2>
+          <p>Designed and developed Recipe Rover, a dynamic full-stack web app, leveraging Node.js, Express, MongoDB, and Mongoose. Implemented user-friendly CRUD operations, secure authentication with Passport.js, and responsive UI using Handlebars. Implemented key security features, including user authentication, login/logout functionality, password encryption, flash messaging, and responsive views, maintaining a balanced blend of functionality and design appeal.</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="course-box">
+          <h2>Full Stack Project - Anonymous Q&A</h2>
+          <p>Engineered a dynamic, single-page question-and-answer web app using Node.js, Express, and MongoDB. Leveraged AJAX calls for asynchronous data retrieval, eliminating page refreshes and enhancing user experience. Implemented secure RESTful API routes for CRUD operations, including background fetch requests, modal dialog boxes for question submission, and error handling. Ensured efficient data handling, emphasizing code clarity and adherence to best practices.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Second Row of Projects -->
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <div class="course-box">
           <h2>Mountain Climb (Java)</h2>
-          <p>
-            Implemented a console-based game using a binary search tree to model a mountain hiking expedition, allowing
-            the hiker to find safe paths with limited resources and overcome obstacles.
-            Developed a customized BST class and nested Node class to represent the mountain's rest-stops, considering
-            supplies and obstacles at each point.
-            Designed an efficient iterator interface for in-order, pre-order, and post-order traversals, enabling seamless
-            access to the paths and ensuring optimal program performance.
-          </p>
+          <p>Implemented a console-based game using a binary search tree to model a mountain hiking expedition, allowing the hiker to find safe paths with limited resources and overcome obstacles. Developed a customized BST class and nested Node class to represent the mountain's rest-stops, considering supplies and obstacles at each point. Designed an efficient iterator interface for in-order, pre-order, and post-order traversals, enabling seamless access to the paths and ensuring optimal program performance.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Translation Lookaside Buffer Translation (C Language)</h2>
-          <p>
-            Developed and implemented an automated Translation Lookaside Buffer (TLB) simulation program in C, capable
-            of retrieving byte data based on virtual addresses.
-            Developed functionality to read and store information about TLB contents, virtual page table, and physical
-            memory cache.
-            Created a user interface to prompt for virtual addresses, retrieving the corresponding byte data or displaying
-            “Cannot be determined” if the data is unavailable. Ensured adherence to coding conventions, proper
-            documentation, and memory management practices.
-          </p>
+          <p>Developed and implemented an automated Translation Lookaside Buffer (TLB) simulation program in C, capable of retrieving byte data based on virtual addresses. Developed functionality to read and store information about TLB contents, virtual page table, and physical memory cache. Created a user interface to prompt for virtual addresses, retrieving the corresponding byte data or displaying “Cannot be determined” if the data is unavailable. Ensured adherence to coding conventions, proper documentation, and memory management practices.</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div the "course-box">
+          <h2>Decoding Sequences With MDeques (Java)</h2>
+          <p>Developed an advanced program using MDeque, a customized double-ended queue with fast access to its middle element, to decode numerical sequences efficiently. Implemented a recursive algorithm and optimized the implementation to meet performance requirements, ensuring O(1) time complexity for push, pop, and peek operations. Completed the implementation of isValid and decode functions, utilizing a doubly linked list design for the MDeque data structure and enabling seamless decoding based on user-provided decoding keys.</p>
         </div>
       </div>
     </div>
-    
+
+    <!-- Third Row of Projects -->
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
-          <h2>Decoding Sequences With MDeques (Java)</h2>
-          <p>
-            Developed an advanced program using MDeque, a customized double-ended queue with fast access to its middle
-            element, to decode numerical sequences efficiently.
-            Implemented a recursive algorithm and optimized the implementation to meet performance requirements, ensuring
-            O(1) time complexity for push, pop, and peek operations.
-            Completed the implementation of isValid and decode functions, utilizing a doubly linked list design for the
-            MDeque data structure and enabling seamless decoding based on user-provided decoding keys.
-          </p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="course-box">
           <h2>Trees on NYC Streets (Java)</h2>
-          <p>
-            Developed a console-based program leveraging open data from the NYC Department of Parks, parsing and
-            analyzing a large tree dataset from the 2015 Street Tree Census.
-            Utilized advanced programming techniques, including multi-file architecture, command line argument handling,
-            and efficient data structures like lists and classes.
-            Implemented a user-friendly interface for searching and retrieving tree species information, showcasing
-            expertise in data processing, program design, and software development best practices.
-          </p>
+          <p>Developed a console-based program leveraging open data from the NYC Department of Parks, parsing and analyzing a large tree dataset from the 2015 Street Tree Census. Utilized advanced programming techniques, including multi-file architecture, command line argument handling, and efficient data structures like lists and classes. Implemented a user-friendly interface for searching and retrieving tree species information, showcasing expertise in data processing, program design, and software development best practices.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Reverse Engineering (C / Assembly Language)</h2>
-          <p>
-            Implemented C code for multiple designated assembly functions, achieving functional parity with the provided
-            version and passing rigorous testing.
-          </p>
+          <p>Implemented C code for multiple designated assembly functions, achieving functional parity with the provided version and passing rigorous testing.</p>
         </div>
       </div>
     </div>
-
   </div>
 </section><!-- End Resume Section -->
 
