Made some formatting modifications

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <div the "course-box">
+        <div class = "course-box">
           <h2>Decoding Sequences With MDeques (Java)</h2>
           <p>Developed an advanced program using MDeque, a customized double-ended queue with fast access to its middle element, to decode numerical sequences efficiently. Implemented a recursive algorithm and optimized the implementation to meet performance requirements, ensuring O(1) time complexity for push, pop, and peek operations. Completed the implementation of isValid and decode functions, utilizing a doubly linked list design for the MDeque data structure and enabling seamless decoding based on user-provided decoding keys.</p>
         </div>
