Added new info.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
 
 <!-- ======= Resume Section ======= -->
+ 
 <section id="resume" class="resume">
   <div class="container">
     <div class="section-title">
@@ -140,20 +141,24 @@
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
+          <h2>GPU Marketplace Automation</h2>
+          <p>Reduced GPU listing and delisting time by 40% by automating marketplace operations using Ansible playbooks and Python
+            scripts, streamlining server setup, provisioning, and pricing adjustments. Optimized GPU search and price tracking by developing automated scripts to extract and analyze pricing trends, improving
+            resource allocation efficiency for GPU providers.</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="course-box">
           <h2>AI-Driven Neural Network Caption Generator</h2>
           <p>Developed an artificial intelligence system in Python and PyTorch to autonomously generate text captions from image data, using the MNIST dataset. Constructed and monitored the integration of image feature extraction and dynamic caption generation, ensuring robust model performance using convolutional and recurrent neural networks. Implemented data preprocessing, model training, and evaluation processes, achieving a 97.78% accuracy rate on the MNIST test dataset with a convolutional neural network model.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
-          <h2>Full Stack Project - Recipe Rover</h2>
-          <p>Designed and developed Recipe Rover, a dynamic full-stack web app, leveraging Node.js, Express, MongoDB, and Mongoose. Implemented user-friendly CRUD operations, secure authentication with Passport.js, and responsive UI using Handlebars. Implemented key security features, including user authentication, login/logout functionality, password encryption, flash messaging, and responsive views, maintaining a balanced blend of functionality and design appeal.</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="course-box">
-          <h2>Full Stack Project - Anonymous Q&A</h2>
-          <p>Engineered a dynamic, single-page question-and-answer web app using Node.js, Express, and MongoDB. Leveraged AJAX calls for asynchronous data retrieval, eliminating page refreshes and enhancing user experience. Implemented secure RESTful API routes for CRUD operations, including background fetch requests, modal dialog boxes for question submission, and error handling. Ensured efficient data handling, emphasizing code clarity and adherence to best practices.</p>
+          <h2>Financial Tracker, MERN Stack</h2>
+          <p> Managed a team of 5 developers to build a full-stack financial tracking app with MongoDB, Express, React, and Node.js,
+            allowing users to add, edit, and monitor transactions, goals, and debts with real-time progress tracking.
+            Implemented secure user authentication using JWT-based login/logout with token blacklisting, enhancing account security.</p>
         </div>
       </div>
     </div>
@@ -162,8 +167,8 @@
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
-          <h2>Mountain Climb (Java)</h2>
-          <p>Implemented a console-based game using a binary search tree to model a mountain hiking expedition, allowing the hiker to find safe paths with limited resources and overcome obstacles. Developed a customized BST class and nested Node class to represent the mountain's rest-stops, considering supplies and obstacles at each point. Designed an efficient iterator interface for in-order, pre-order, and post-order traversals, enabling seamless access to the paths and ensuring optimal program performance.</p>
+          <h2>Full Stack Project - Recipe Rover</h2>
+          <p>Designed and developed Recipe Rover, a dynamic full-stack web app, leveraging Node.js, Express, MongoDB, and Mongoose. Implemented user-friendly CRUD operations, secure authentication with Passport.js, and responsive UI using Handlebars. Implemented key security features, including user authentication, login/logout functionality, password encryption, flash messaging, and responsive views, maintaining a balanced blend of functionality and design appeal.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
@@ -173,21 +178,15 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <div class = "course-box">
-          <h2>Decoding Sequences With MDeques (Java)</h2>
-          <p>Developed an advanced program using MDeque, a customized double-ended queue with fast access to its middle element, to decode numerical sequences efficiently. Implemented a recursive algorithm and optimized the implementation to meet performance requirements, ensuring O(1) time complexity for push, pop, and peek operations. Completed the implementation of isValid and decode functions, utilizing a doubly linked list design for the MDeque data structure and enabling seamless decoding based on user-provided decoding keys.</p>
+        <div class="course-box">
+          <h2>Trees on NYC Streets (Java)</h2>
+          <p>Developed a console-based program leveraging open data from the NYC Department of Parks, parsing and analyzing a large tree dataset from the 2015 Street Tree Census. Utilized advanced programming techniques, including multi-file architecture, command line argument handling, and efficient data structures like lists and classes. Implemented a user-friendly interface for searching and retrieving tree species information, showcasing expertise in data processing, program design, and software development best practices.</p>
         </div>
       </div>
     </div>
 
     <!-- Third Row of Projects -->
     <div class="row">
-      <div class="col-lg-4 col-md-6">
-        <div class="course-box">
-          <h2>Trees on NYC Streets (Java)</h2>
-          <p>Developed a console-based program leveraging open data from the NYC Department of Parks, parsing and analyzing a large tree dataset from the 2015 Street Tree Census. Utilized advanced programming techniques, including multi-file architecture, command line argument handling, and efficient data structures like lists and classes. Implemented a user-friendly interface for searching and retrieving tree species information, showcasing expertise in data processing, program design, and software development best practices.</p>
-        </div>
-      </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Reverse Engineering (C / Assembly Language)</h2>
@@ -208,34 +207,39 @@
       <h2>Courses</h2>
       <p>Below are some relevant coursework I have completed / currently taking at NYU:</p>
     </div>
+
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <div class="course-box">
+          <h2>Software Engineering </h2>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="course-box">
+          <h2>Agile Software Development</h2>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="course-box">
+          <h2>Data Management and Analysis</h2>
+        </div>
+      </div>
+    </div>
     
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Artificial Intelligence </h2>
-          <p>
-            Topic covered in course: Machine Learning Models, Recurrent Neural Networks, Convolutional Neural Networks, 
-            Optimization Techniques, Decision Making and Probability, State Space Search, Logical Reasoning and Propositional Calculus, 
-            Data Handling and Representation, Loss Functions and Model Evaluation.
-          </p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Applied Internet Technology</h2>
-          <p>
-            Topics covered in course: JavaScript, Full Stack Development, Server Side Programming, Realtime Web Applications, 
-            Client Side Programming, Storing and Retrieving Data, 
-            Client Side Build-Out, Node.js, Express.js, MongoDB & Mongoose.
-          </p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Operating Systems</h2>
-          <p>
-            Topics covered in course: Virtual Memory, File Systems, Security, Scheduling, Concurrency/Synchronization, Processes, I/O, Context Switches, User-Level Threading.
-          </p>
         </div>
       </div>
     </div>
@@ -248,34 +252,16 @@
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Basic Algorithms</h2>
-          <p>
-            Topic covered in course: solution of recurrence equations, sorting algorithms, binary search trees,
-            partitioning, graphs, spanning trees, shortest paths, connectivity, depth-first and breadth-first search,
-            dynamic programming, and divide-and-conquer techniques.
-          </p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Computer Systems Organization</h2>
-          <p>
-            Topics covered in course: the logical design of computers, computer architecture, the internal representation
-            of data, instruction sets, and addressing logic, as well as pointers, structures, and other features of
-            high-level languages that relate to assembly language. Programming assignments were done both in assembly
-            language and C.
-          </p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Linear Algebra</h2>
-          <p>
-            Topics covered in course: formulating, solving, applying, and interpreting systems of linear equations in
-            several variables, computing with and classifying matrices, mastering the fundamental concepts of abstract
-            vector spaces, decomposing linear transformations and analyzing their spectra (eigenvectors and eigenvalues),
-            utilizing length and orthogonality in each of the above contexts, and applying orthogonal projection to
-            optimization (least-squares) problems.
-          </p>
         </div>
       </div>
     </div>
@@ -284,32 +270,16 @@
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Data Structures</h2>
-          <p>
-            Topics covered in course: primitive data types and elementary programming, simple input/output, conditional
-            execution and selection statements, mathematical functions, characters and strings, iterations, methods,
-            arrays (1D and 2D), operations on arrays, objects and classes, object oriented thinking and design,
-            inheritance and polymorphism, graphics and animations (using Processing), exception handling and text I/O,
-            abstract classes and interfaces, basics of recursion.
-          </p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Discrete Mathematics</h2>
-          <p>
-            Topics covered in course: writing clear mathematical statements using standard notation and terminology, a
-            variety of proof techniques (contradiction, induction, etc.), the language of basic set theory and Boolean
-            logic, basic theorems and their implications in a variety of (discrete) fields, including combinatorics,
-            function theory, number theory, and graph theory.
-          </p>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="course-box">
           <h2>Calculus II</h2>
-          <p>
-            Topics covered in course: Infinite Series, Techniques of Integration, Plane Analytic Geometry, Polar Coordinates and Parametric Equations, Further Applications of Integration.
-          </p>
         </div>
       </div>
     </div>
